# tsu_vehicles

./: .gitignore  0_setup_database_and_tables.py  1_get_all_workshop_vehicles.py  2_get_new_workshop_vehicles.py  3_save_vehicles_using_jsons.py  README.md  pyproject.toml
sql/: ddl.sql  upsert_makers.sql  upsert_vehicles.sql  upsert_workshop_items.sql
src/: db.py  workshop.py
vehicles/: F3Originv11.json  Formula_TSU.json  _CONF_MAX_VALUES.json  _CONF_MIN_VALUES.json  drifty.json  grippy.json  speedy.json  sporty.json
