[project]
name = "tsu_vehicles"
version = "0.1.0"
description = "Collect data about vehicles used in Turbo Sliders Unlimited"
authors = [
    {name = "Andre Petersen", email = "info@csup.app"},
]
dependencies = [
    "pandas>=2.1.4",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
